# TradeBotMedallion2.0

./: .gcloudignore.alert  BOT_STATUS.md  DEPLOYMENT_CHECKLIST.md  Dockerfile.alert  FIX_DATABASE_URL.md  LIVE_VS_BACKTEST_COMPARISON.md  QUICK_SUPABASE_SETUP.md  README.md  README_ALERT_SYSTEM.md  SUPABASE_SETUP.md  TROUBLESHOOTING_LOW_TRADES.md  backtest_3months_current.py  backtest_may_oct_2024.py  check_cloud_bot.sh  compare_strategies.py  config.py  config.yaml  current_strategy_3month_20251113_214700.csv  current_strategy_3month_20251113_220658.csv  current_strategy_may_oct_2025_20251114_144819.csv  current_strategy_monthly_4months_20251113_134853.csv  current_strategy_monthly_4months_20251113_135002.csv  current_strategy_monthly_4months_20251113_135033.csv  current_strategy_monthly_4months_20251113_220352.csv  env_template.txt  live_anomaly_strategy.py  monitoring_frequency_comparison_20251114_155219.csv  push_changes.sh  push_to_medallion.sh  pyproject.toml  requirements.txt  scheduler.py  show_trade_dates.py  supabase_logger.py  trader.py
app/: __init__.py  __main__.py  alerts.py  config.py  data_providers.py  indicators.py  main.py  models.py  realtime.py  trading.py  universe.py
data/: aapl_30min_1year_20251115.csv  aapl_30min_1year_alpaca_20251115.csv  aapl_30min_20251108_to_20251115.csv  current_strategy_3month_20251113_134016.csv  current_strategy_3month_20251113_134115.csv  current_strategy_3month_20251113_145234.csv  current_strategy_may_oct_2024_20251114_142927.csv  current_strategy_monthly_4months_20251113_134930.csv  (+6 more)
docs/: ALERT_SYSTEM_DEPLOYMENT.md  (+20 more)
(+7660 files in other folders)
